test/classes/hilde/records/assignReturns-error2.good
assignReturns-error2.chpl:9: error: The return value of an assignment operator must be 'void'.
